# class_elective_advisor_491

./: .coveragerc  .env.example  .gitignore  README.md  ai_advice.db  courses.json  launch_old.json  main.py  pyproject.toml  pytest.ini  run_debug.py  version.json  version.txt
.github/: pull_request_template.md
.github/workflows/: _mini-check.yml  pytest.yml  version-file-on-tag.yml
ai_integration/: ai_dev_notes.md  ai_module.py
artifacts/: report.html
database/: DB_table_setup.py  DB_user_setup.py  __init__.py  ai_advice.db  category.csv  colleges.csv  courses.csv  db_ setup.py  db_add.py  db_elective_set_up.py  db_mahtos.py  db_operations.py  db_setup.py  degree_levels.csv  degrees.csv  delete_Info.py  delete_db.py  departments.csv  edit_info.py  jobs.csv  requirements.csv  subcategories.csv  tempCodeRunnerFile.py  test_actions.py  test_functions.py  user_actions.py
db/: ai_advice.db  smart_elective_advisor.db
docs/: titanpark_api_notes.md
docs/test_plan/: test_plan.md
file_structure/: generate_file_structure _rev_2_1.py  generate_file_structure _rev_2_2.py  generate_file_structure _rev_3_0.py
file_structure/chat_gpt/: program_chat_gpt.txt
file_structure/chat_gpt/chunks/: chunk1.txt  chunk2.txt
tests/: conftest.py  test_ai_fake_errors.py  test_ai_module.py  test_app_version.py  test_db_operations.py  test_db_setup.py  test_find_courses_json.py  test_gui.py  test_load_env.py  test_parse_bool_env.py  test_parse_course_data.py  test_version_json.py  test_version_txt.py
tests/logs/: test_ai.md
titanpark_integration/: __init__.py  client.py  config.py  recommendation.py
ui/: app_version.py  gui.py  gui_titanpark_integration.py  temp.py  theme.py  zulu_timestamp.py
utilities/: load_env.py  logger_setup.py
