[project]
name = "class-elective-advisor-491"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Dobley",email = "mkmshopping@sbcglobal.net"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "tkcalendar (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "class_elective_advisor_491", from = "src"}]


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.16"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
pytest-html = "^4.1.1"
pytest-json-report = "^1.5.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
